--- a/Programma/Full_TEST/Full_TEST.ioc
+++ b/Programma/Full_TEST/Full_TEST.ioc
@@ -9,22 +9,25 @@ Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM2
 Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP6=USART6
+Mcu.IPNb=7
 Mcu.Name=STM32F746NGHx
 Mcu.Package=TFBGA216
-Mcu.Pin0=PA15
-Mcu.Pin1=PB7
-Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin11=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PI2
-Mcu.Pin3=PI1
-Mcu.Pin4=PC14/OSC32_IN
-Mcu.Pin5=PA9
-Mcu.Pin6=PC15/OSC32_OUT
-Mcu.Pin7=PI11
-Mcu.Pin8=PH0/OSC_IN
-Mcu.Pin9=PH1/OSC_OUT
-Mcu.PinsNb=12
+Mcu.Pin0=PG14
+Mcu.Pin1=PA15
+Mcu.Pin10=PC7
+Mcu.Pin11=PH1/OSC_OUT
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin2=PB7
+Mcu.Pin3=PI2
+Mcu.Pin4=PI1
+Mcu.Pin5=PC14/OSC32_IN
+Mcu.Pin6=PA9
+Mcu.Pin7=PC15/OSC32_OUT
+Mcu.Pin8=PI11
+Mcu.Pin9=PH0/OSC_IN
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746NGHx
@@ -41,6 +44,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA15.Signal=S_TIM2_CH1_ETR
 PA9.Locked=true
@@ -52,6 +56,11 @@ PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PC7.Locked=true
+PC7.Mode=Asynchronous
+PC7.Signal=USART6_RX
+PG14.Mode=Asynchronous
+PG14.Signal=USART6_TX
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
@@ -167,6 +176,9 @@ TIM2.Period=240-1
 TIM2.Prescaler=1736
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART6.BaudRate=9600
+USART6.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART6.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
